2010-07-21  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/SecurityDesc.java: Converge all property
	permission settings info a single class.
	(getPermissions): Do not give read/write permissions to anything other
	than what is allowed by spec.
	(getSandBoxPermissions): Same.
	* netx/net/sourceforge/jnlp/runtime/ApplicationInstance.java: Remove
	blanket imports.
	(installEnvironment): Write properties in a restricted
	AccessControlContext based on app specific permissions only.
	* netx/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java
	(checkPermission): Remove all property permission decision making code
	and collapse it all into SecurityDesc.java.

2010-07-23  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to latest JDK tree.

2010-07-23  Andrew John Hughes  <ahughes@redhat.com>

	* netx/netscape/javascript/JSObjectCreatePermission.java:
	Remove duplicate file.
	* acinclude.m4:
	(WITH_OPENJDK_SRC_DIR): Fix breakage in parameter caused
	by previous configure help update.
	* netx/net/sourceforge/jnlp/Launcher.java: Synchronise
	with IcedTea6 version.

2010-07-23  Andrew John Hughes  <ahughes@redhat.com>

	* netx/net/sourceforge/jnlp/security/AccessWarningPane.java:
	(addComponents()): Fix call to getType().
	* netx/net/sourceforge/jnlp/security/CertWarningPane.java: Likewise.
	* netx/net/sourceforge/jnlp/security/SecurityWarningDialog.java:
	(getType): Rename to getAccessType() to avoid conflict with
	Window.getType() in OpenJDK7.

2010-07-23  Andrew John Hughes  <ahughes@redhat.com>

	* netx/javax/jnlp/BasicService.java,
	* netx/javax/jnlp/ClipboardService.java,
	* netx/javax/jnlp/DownloadService.java,
	* netx/javax/jnlp/DownloadServiceListener.java,
	* netx/javax/jnlp/ExtendedService.java,
	* netx/javax/jnlp/ExtensionInstallerService.java,
	* netx/javax/jnlp/FileContents.java,
	* netx/javax/jnlp/FileOpenService.java,
	* netx/javax/jnlp/FileSaveService.java,
	* netx/javax/jnlp/JNLPRandomAccessFile.java,